--- a/src/app/components/room/room.component.html
+++ b/src/app/components/room/room.component.html
@@ -1,1 +1,5 @@
 <p>Welcome {{user}} to {{roomName}}</p>
+<button (click)="test()">TEST</button>
+<br><br>
+<b>Players:</b>
+<div *ngFor="let player of players">{{player}}</div>
