--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
-<app-header></app-header>
-<router-outlet></router-outlet>
-<app-footer></app-footer>
+<!-- <app-header></app-header> -->
+
+<div class="page-container">
+    <router-outlet></router-outlet>
+</div>
+
+<!-- <app-footer></app-footer> -->
+
